sas-core/main/default/objects/Case/fields/FCS_CaseReason__c.field-meta.xml
<CustomField>
    <fullName>FCS_CaseReason__c</fullName>
    <complianceGroup>PIIExtract;WipeRetain</complianceGroup>
    <description>Second level categorization for cases.</description>
    <label>Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>7 day refund guarantee</fullName>
            </value>
            <value>
                <fullName>ADM</fullName>
            </value>
            <value>
                <fullName>AEM issues</fullName>
            </value>
            <value>
                <fullName>Agent Helpdesk</fullName>
            </value>
            <value>
                <fullName>Agent Helpdesk R</fullName>
            </value>
            <value>
                <fullName>Airport</fullName>
            </value>
            <value>
                <fullName>Airport Services</fullName>
            </value>
            <value>
                <fullName>Ancillary</fullName>
            </value>
            <value>
                <fullName>Animals</fullName>
            </value>
            <value>
                <fullName>ARI</fullName>
            </value>
            <value>
                <fullName>Assistance</fullName>
            </value>
            <value>
                <fullName>ATC/ATC Refund</fullName>
            </value>
            <value>
                <fullName>ATO Account Takeover</fullName>
            </value>
            <value>
                <fullName>Availability / MCT</fullName>
            </value>
            <value>
                <fullName>Award travel</fullName>
            </value>
            <value>
                <fullName>Back-office R</fullName>
            </value>
            <value>
                <fullName>Baggage</fullName>
            </value>
            <value>
                <fullName>Baggage Service</fullName>
            </value>
            <value>
                <fullName>Baggage service R</fullName>
            </value>
            <value>
                <fullName>Bank Payment</fullName>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Boozt Attack</fullName>
            </value>
            <value>
                <fullName>Campaigns</fullName>
            </value>
            <value>
                <fullName>Cancellation/refund of ticket</fullName>
            </value>
            <value>
                <fullName>CAR</fullName>
            </value>
            <value>
                <fullName>Changes</fullName>
            </value>
            <value>
                <fullName>Chargeback</fullName>
            </value>
            <value>
                <fullName>Check in</fullName>
            </value>
            <value>
                <fullName>Claim</fullName>
            </value>
            <value>
                <fullName>Claims</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>