sas-core/main/default/objects/Case/fields/FCS_CaseResolution__c.field-meta.xml
<CustomField>
    <fullName>FCS_CaseResolution__c</fullName>
    <complianceGroup>WipeRetain</complianceGroup>
    <label>Case Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FCS_Case_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>According to rules</fullName>
            </value>
            <value>
                <fullName>Acquirer</fullName>
            </value>
            <value>
                <fullName>Activate Profile</fullName>
            </value>
            <value>
                <fullName>Add travel pass</fullName>
            </value>
            <value>
                <fullName>Agreement related question</fullName>
            </value>
            <value>
                <fullName>Airlines</fullName>
            </value>
            <value>
                <fullName>Airport</fullName>
            </value>
            <value>
                <fullName>Allowance</fullName>
            </value>
            <value>
                <fullName>Amadeus</fullName>
            </value>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Authorities</fullName>
            </value>
            <value>
                <fullName>Availability</fullName>
            </value>
            <value>
                <fullName>AVIH/PETC</fullName>
            </value>
            <value>
                <fullName>Benefits</fullName>
            </value>
            <value>
                <fullName>Big/Supersale</fullName>
            </value>
            <value>
                <fullName>Booking Confirmation</fullName>
            </value>
            <value>
                <fullName>Booking flow</fullName>
            </value>
            <value>
                <fullName>Booking related</fullName>
            </value>
            <value>
                <fullName>Booking rules</fullName>
            </value>
            <value>
                <fullName>Bug/User story created</fullName>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>Campaigns</fullName>
            </value>
            <value>
                <fullName>Cars</fullName>
            </value>
            <value>
                <fullName>CC Update</fullName>
            </value>
            <value>
                <fullName>Changed dates</fullName>
            </value>
            <value>
                <fullName>Changed destination</fullName>
            </value>
            <value>
                <fullName>Changed email</fullName>
            </value>
            <value>
                <fullName>Changed name</fullName>
            </value>
            <value>
                <fullName>Changed phone number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>