sas-core/main/default/objects/Case/fields/FCS_CaseResolutionDetails__c.field-meta.xml
<CustomField>
    <fullName>FCS_CaseResolutionDetails__c</fullName>
    <label>Case Resolution Details</label>
    <type>TextArea</type>
</CustomField>