sas-core/main/default/objects/Case/fields/FCS_CaseSubReason__c.field-meta.xml
<CustomField>
    <fullName>FCS_CaseSubReason__c</fullName>
    <complianceGroup>WipeRetain</complianceGroup>
    <description>Third level categorization for cases.</description>
    <label>Case Sub-reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FCS_CaseReason__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Access rights</fullName>
            </value>
            <value>
                <fullName>Add EB in booking</fullName>
            </value>
            <value>
                <fullName>Add infant in booking</fullName>
            </value>
            <value>
                <fullName>Ad-hoc Groups</fullName>
            </value>
            <value>
                <fullName>Agent - Agreement related Question</fullName>
            </value>
            <value>
                <fullName>Agent - Other</fullName>
            </value>
            <value>
                <fullName>Agent - TravelPass</fullName>
            </value>
            <value>
                <fullName>Agent - Travel Pass Booking</fullName>
            </value>
            <value>
                <fullName>Agent - Travel Pass CC update</fullName>
            </value>
            <value>
                <fullName>Agent - Travel Pass Contact Update</fullName>
            </value>
            <value>
                <fullName>Agent - Travel Pass Receipt</fullName>
            </value>
            <value>
                <fullName>Agent - Travel Pass Sell</fullName>
            </value>
            <value>
                <fullName>Agent - Travel Pass Statistics</fullName>
            </value>
            <value>
                <fullName>Agent - Travel Pass wrong deb</fullName>
            </value>
            <value>
                <fullName>Agreement related question*</fullName>
            </value>
            <value>
                <fullName>Air</fullName>
            </value>
            <value>
                <fullName>Airlines</fullName>
            </value>
            <value>
                <fullName>Airport service locations</fullName>
            </value>
            <value>
                <fullName>Allergies</fullName>
            </value>
            <value>
                <fullName>Allowance</fullName>
            </value>
            <value>
                <fullName>Alternatives</fullName>
            </value>
            <value>
                <fullName>Amadeus</fullName>
            </value>
            <value>
                <fullName>AMEX</fullName>
            </value>
            <value>
                <fullName>AMEX 2 for 1</fullName>
            </value>
            <value>
                <fullName>Ancillary</fullName>
            </value>
            <value>
                <fullName>Ancillary error</fullName>
            </value>
            <value>
                <fullName>Arrival information</fullName>
            </value>
            <value>
                <fullName>ATC refund flow</fullName>
            </value>
            <value>
                <fullName>Author</fullName>
            </value>
            <value>
                <fullName>Authorization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>