sas-core/main/default/objects/Case/fields/FCS_CaseTags__c.field-meta.xml
<CustomField>
    <fullName>FCS_CaseTags__c</fullName>
    <complianceGroup>WipeRetain</complianceGroup>
    <label>Additional Case Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ADM</fullName>
            </value>
            <value>
                <fullName>AEM issues</fullName>
            </value>
            <value>
                <fullName>Agent Helpdesk R</fullName>
            </value>
            <value>
                <fullName>Airport</fullName>
            </value>
            <value>
                <fullName>Airport Services</fullName>
            </value>
            <value>
                <fullName>Ancillary</fullName>
            </value>
            <value>
                <fullName>Animals</fullName>
            </value>
            <value>
                <fullName>ARI</fullName>
            </value>
            <value>
                <fullName>Assistance</fullName>
            </value>
            <value>
                <fullName>ATC/ATC Refund</fullName>
            </value>
            <value>
                <fullName>Availability / MCT</fullName>
            </value>
            <value>
                <fullName>Back-office R</fullName>
            </value>
            <value>
                <fullName>Baggage</fullName>
            </value>
            <value>
                <fullName>Baggage service R</fullName>
            </value>
            <value>
                <fullName>Campaigns</fullName>
            </value>
            <value>
                <fullName>Cancellation/refund of ticket</fullName>
            </value>
            <value>
                <fullName>Changes</fullName>
            </value>
            <value>
                <fullName>Claims</fullName>
            </value>
            <value>
                <fullName>Code Share</fullName>
            </value>
            <value>
                <fullName>Conditions of carriage</fullName>
            </value>
            <value>
                <fullName>Contacts-Country</fullName>
            </value>
            <value>
                <fullName>Contacts-partners</fullName>
            </value>
            <value>
                <fullName>Contacts R</fullName>
            </value>
            <value>
                <fullName>Corp Account managers (SAS for busiess)</fullName>
            </value>
            <value>
                <fullName>Corporate product</fullName>
            </value>
            <value>
                <fullName>Corporate R</fullName>
            </value>
            <value>
                <fullName>Credit card</fullName>
            </value>
            <value>
                <fullName>CR requests</fullName>
            </value>
            <value>
                <fullName>Customer Care R</fullName>
            </value>
            <value>
                <fullName>Delayed/damaged luggage</fullName>
                <label>Delayed/damaged baggage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>