sas-core/main/default/objects/Case/fields/FCS_CODSId__c.field-meta.xml
<CustomField>
    <fullName>FCS_CODSId__c</fullName>
    <label>CODS Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>