sas-core/main/default/objects/Case/fields/FCS_Consent__c.field-meta.xml
<CustomField>
    <fullName>FCS_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether consent was granted for long term storage of the case by the customer. This might be explicit or implicit depending on the initiating channel.</description>
    <label>Consent</label>
    <type>Checkbox</type>
</CustomField>