sas-core/main/default/objects/Case/fields/FCS_EBLevel__c.field-meta.xml
<CustomField>
    <fullName>FCS_EBLevel__c</fullName>
    <label>EuroBonus Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EuroBonusLevel</valueSetName>
    </valueSet>
</CustomField>