sas-core/main/default/objects/Case/fields/FCS_FirstClosingDate__c.field-meta.xml
<CustomField>
    <fullName>FCS_FirstClosingDate__c</fullName>
    <description>Shows when the Case was first Closed</description>
    <label>First Closing Date</label>
    <type>DateTime</type>
</CustomField>