sas-core/main/default/objects/Case/fields/FCS_IATA_Level__c.field-meta.xml
<CustomField>
    <fullName>FCS_IATA_Level__c</fullName>
    <description>IATA Level of the account linked to the case</description>
    <formula>TEXT(Account.IATA_Level__c)</formula>
    <inlineHelpText>IATA Level of the account linked to the case</inlineHelpText>
    <label>IATA Level</label>
    <type>Text</type>
</CustomField>