sas-core/main/default/objects/Case/fields/FCS_IATA_Number__c.field-meta.xml
<CustomField>
    <fullName>FCS_IATA_Number__c</fullName>
    <description>IATA Number from the account linked to the case</description>
    <formula>Account.IATA_Number__c</formula>
    <inlineHelpText>IATA Number from the account linked to the case.</inlineHelpText>
    <label>IATA Number</label>
    <type>Text</type>
</CustomField>