sas-core/main/default/objects/Case/fields/FCS_IsReopened__c.field-meta.xml
<CustomField>
    <fullName>FCS_IsReopened__c</fullName>
    <formula>FCS_ReopenedCount__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reopened</label>
    <type>Checkbox</type>
</CustomField>