sas-core/main/default/objects/Case/fields/FCS_LatestSurveyInvitation__c.field-meta.xml
<CustomField>
    <fullName>FCS_LatestSurveyInvitation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Survey Invitation</label>
    <referenceTo>SurveyInvitation</referenceTo>
    <relationshipLabel>Latest Survey Invitation on Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>