sas-core/main/default/objects/Case/fields/FCS_PIR__c.field-meta.xml
<CustomField>
    <fullName>FCS_PIR__c</fullName>
    <label>PIR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>