sas-core/main/default/objects/Case/fields/FCS_PNR__c.field-meta.xml
<CustomField>
    <fullName>FCS_PNR__c</fullName>
    <label>PNR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>