sas-core/main/default/objects/Case/fields/FCS_ReopenedCount__c.field-meta.xml
<CustomField>
    <fullName>FCS_ReopenedCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Shows the amount of times a Case has been Reopened (the amount of times the status has changed from &quot;Closed&quot;).</description>
    <label>Reopened Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>