sas-core/main/default/objects/Case/fields/FCS_Site__c.field-meta.xml
<CustomField>
    <fullName>FCS_Site__c</fullName>
    <complianceGroup>WipeRetain</complianceGroup>
    <description>The site of the case owner (that is a user)</description>
    <inlineHelpText>The site of the case owner (that is a user)</inlineHelpText>
    <label>Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FCS_Site</valueSetName>
    </valueSet>
</CustomField>