sas-core/main/default/objects/Case/fields/FCS_SubOrigin_c__c.field-meta.xml
<CustomField>
    <fullName>FCS_SubOrigin_c__c</fullName>
    <description>Sub origin to determine the origin of email / web to case cases</description>
    <label>Case Sub Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System &amp; Tariff</fullName>
            </value>
            <value>
                <fullName>Functional Product Support</fullName>
            </value>
            <value>
                <fullName>Pandion SE</fullName>
            </value>
            <value>
                <fullName>Pandion NO</fullName>
            </value>
            <value>
                <fullName>Pandion DK</fullName>
            </value>
            <value>
                <fullName>Agent Helpdesk SIA</fullName>
            </value>
            <value>
                <fullName>Agent Fares Ticketing EU</fullName>
            </value>
            <value>
                <fullName>Sales Information</fullName>
            </value>
            <value>
                <fullName>SASSI Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>