sas-core/main/default/objects/Case/fields/FCS_SurveyLanguage__c.field-meta.xml
<CustomField>
    <fullName>FCS_SurveyLanguage__c</fullName>
    <description>The characters(EN,SV, DA, NO etc) to determine what language a CSI survey should be set to.</description>
    <inlineHelpText>The characters(EN,SV, DA, NO etc) to determine what language a CSI survey should be set to.</inlineHelpText>
    <label>Survey Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>