sas-core/main/default/objects/Case/fields/FCS_Team__c.field-meta.xml
<CustomField>
    <fullName>FCS_Team__c</fullName>
    <description>The team of the case owner (that is a user)</description>
    <inlineHelpText>The team of the case owner (that is a user)</inlineHelpText>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Team 1</fullName>
            </value>
            <value>
                <fullName>Team 2</fullName>
            </value>
            <value>
                <fullName>Team 3</fullName>
            </value>
            <value>
                <fullName>Team 4</fullName>
            </value>
            <value>
                <fullName>Team 5</fullName>
            </value>
            <value>
                <fullName>Team 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>