sas-core/main/default/objects/Case/fields/FCS_TPAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>FCS_TPAccountNumber__c</fullName>
    <description>Unique identifier for customer&apos;s Travel Pass account</description>
    <label>Travel Pass Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>