sas-core/main/default/objects/Case/fields/FCS_VirtualOrganization__c.field-meta.xml
<CustomField>
    <fullName>FCS_VirtualOrganization__c</fullName>
    <description>The Virtual Organization of the case owner (that is a user)</description>
    <inlineHelpText>The Virtual Organization of the case owner (that is a user)</inlineHelpText>
    <label>Virtual Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>