sas-core/main/default/objects/Case/fields/Feedback_Category__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Category__c</fullName>
    <label>Feedback Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>At the airport</fullName>
            </value>
            <value>
                <fullName>Baggage</fullName>
            </value>
            <value>
                <fullName>Booking</fullName>
            </value>
            <value>
                <fullName>During flight</fullName>
            </value>
            <value>
                <fullName>Flight disruption</fullName>
            </value>
            <value>
                <fullName>Travel extras</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>