sas-core/main/default/objects/Case/fields/Feedback_Type__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Type__c</fullName>
    <label>Feedback Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Feedback_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baggage damaged</fullName>
            </value>
            <value>
                <fullName>Baggage delayed/lost</fullName>
            </value>
            <value>
                <fullName>Booking error</fullName>
            </value>
            <value>
                <fullName>Cabin environment</fullName>
            </value>
            <value>
                <fullName>Denied boarding</fullName>
            </value>
            <value>
                <fullName>Downgrading</fullName>
            </value>
            <value>
                <fullName>Extra baggage</fullName>
            </value>
            <value>
                <fullName>Flight cancellation</fullName>
            </value>
            <value>
                <fullName>Flight delay</fullName>
            </value>
            <value>
                <fullName>Foodborne illness</fullName>
            </value>
            <value>
                <fullName>Gate issues</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>In-flight meal</fullName>
            </value>
            <value>
                <fullName>In-flight service</fullName>
            </value>
            <value>
                <fullName>Lounge</fullName>
            </value>
            <value>
                <fullName>Missed connection</fullName>
            </value>
            <value>
                <fullName>Prepaid seat</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Regression</fullName>
            </value>
            <value>
                <fullName>Special assistance</fullName>
            </value>
            <value>
                <fullName>Travel document control</fullName>
            </value>
            <value>
                <fullName>WiFi</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>