sas-core/main/default/objects/Case/fields/Final_Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Payment_Due_Date__c</fullName>
    <label>Final Payment Due Date</label>
    <type>Date</type>
</CustomField>