sas-core/main/default/objects/Case/fields/Flight_Date__c.field-meta.xml
<CustomField>
    <fullName>Flight_Date__c</fullName>
    <description>Flight date supplied by customer for feedback cases.</description>
    <inlineHelpText>Flight date supplied by customer for feedback cases.</inlineHelpText>
    <label>Flight Date</label>
    <type>Date</type>
</CustomField>