sas-core/main/default/objects/Case/fields/Flight_Info_Missing_Points_X2__c.field-meta.xml
<CustomField>
    <fullName>Flight_Info_Missing_Points_X2__c</fullName>
    <label>2. Missing Points Flight Info</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>