sas-core/main/default/objects/Case/fields/Flight_Info_Missing_Points_X3__c.field-meta.xml
<CustomField>
    <fullName>Flight_Info_Missing_Points_X3__c</fullName>
    <label>3. Missing Points Flight Info</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>