sas-core/main/default/objects/Case/fields/Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number__c</fullName>
    <description>Flight number supplied by customer for a feedback case.</description>
    <inlineHelpText>Flight number supplied by customer for a feedback case.</inlineHelpText>
    <label>Flight Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>