sas-core/main/default/objects/Case/fields/GDPR_Consent__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether consent to store the messaging session was obtained from the user. The consent should be granted through the channel which initiated the case.</description>
    <label>Consent</label>
    <type>Checkbox</type>
</CustomField>