sas-core/main/default/objects/Case/fields/GDPR_Wiped__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Wiped__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the case data has been cleared from identifiable information and related interactions have been deleted.</description>
    <label>Wiped</label>
    <type>Checkbox</type>
</CustomField>