sas-core/main/default/objects/Case/fields/Group_Departure_Airport__c.field-meta.xml
<CustomField>
    <fullName>Group_Departure_Airport__c</fullName>
    <formula>Group_Travel_Request__r.From_Airport__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Departure Airport</label>
    <type>Text</type>
</CustomField>