sas-core/main/default/objects/Case/fields/Group_Destination__c.field-meta.xml
<CustomField>
    <fullName>Group_Destination__c</fullName>
    <description>Destination airport selected by customer in the group travel request form</description>
    <formula>Group_Travel_Request__r.To_Airport__c</formula>
    <inlineHelpText>Destination airport selected by customer in the group travel request form</inlineHelpText>
    <label>Group Destination</label>
    <type>Text</type>
</CustomField>